hphp/hack/test/enum_supertyping/typing/base.bad.php.exp
File "base.bad.php", line 9, characters 6-6:
Enum B includes enum A but their base types are incompatible (Typing[4388])
